--- a/itsEVEST/MainWindow.xaml
+++ b/itsEVEST/MainWindow.xaml
@@ -3,10 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:itsEVEST"
-        xmlns:UserControls="clr-namespace:itsEVEST.View.UserControls"
+        xmlns:local="clr-namespace:itsEVEST" Loaded="MainWindow_Loaded"
+        xmlns:UserControls="clr-namespace:itsEVEST.View.UserControls" xmlns:viewmodels="clr-namespace:itsEVEST.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:DataInsertViewModel}"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen"
-        Title="MainWindow" Height="450" Width="800" Loaded="MainWindow_Loaded">
+        Title="E-Vest" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="10*"/>
@@ -18,7 +18,7 @@
         <!-- 1st Row -->
         <Grid Grid.Row="0">
             <Rectangle Fill="Black"/>
-            <TextBlock Text="MATCH INFO HERE" Foreground="White"
+            <TextBlock Name="MatchInfo" Text="" Foreground="White"
                        HorizontalAlignment="Center" VerticalAlignment="Center"
                        FontSize="20" FontWeight="DemiBold"/>
         </Grid>
@@ -31,14 +31,14 @@
             </Grid.ColumnDefinitions>
 
             <!-- 2nd Row, 1st Column -->
-            <Grid Grid.Column="0">
+            <Grid Grid.Column="0" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="20*"/>
                     <ColumnDefinition Width="80*"/>
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0">
                     <Rectangle Fill="DarkRed"/>
-                    <TextBlock Text="TEAM NAME" VerticalAlignment="Top"
+                    <TextBlock Text="" VerticalAlignment="Top"
                                HorizontalAlignment="Center" 
                                FontSize="8" Foreground="White" 
                                FontWeight="SemiBold"
@@ -46,7 +46,7 @@
                 </Grid>
                 <Grid Grid.Column="1">
                     <Rectangle Fill="DarkRed"/>
-                    <TextBlock Text="NAME" VerticalAlignment="Center"
+                    <TextBlock Text="" VerticalAlignment="Center"
                                HorizontalAlignment="Center" 
                                FontSize="48" Foreground="White" 
                                FontWeight="SemiBold"
@@ -64,7 +64,7 @@
                 
                 <Grid Grid.Column="1">
                     <Rectangle Fill="DarkBlue" />
-                    <TextBlock Text="TEAM NAME" VerticalAlignment="Top"
+                    <TextBlock Text="" VerticalAlignment="Top"
                                HorizontalAlignment="Center" 
                                FontSize="8" Foreground="White" 
                                FontWeight="SemiBold"
@@ -73,7 +73,7 @@
                 </Grid>
                 <Grid Grid.Column="0">
                     <Rectangle Fill="DarkBlue"/>
-                    <TextBlock Text="NAME" VerticalAlignment="Center"
+                    <TextBlock Text="" VerticalAlignment="Center"
                                HorizontalAlignment="Center" 
                                FontSize="48" Foreground="White" 
                                FontWeight="SemiBold"
@@ -95,10 +95,11 @@
             <!-- 3rd Row, 1st Column -->
             <Grid Grid.Column="0">
                 <Rectangle Fill="Red"/>
-                <TextBlock Text="0" VerticalAlignment="Center"
+                <TextBlock VerticalAlignment="Center"
                            HorizontalAlignment="Center" 
                            FontSize="128" Foreground="White" 
-                           FontWeight="SemiBold"/>
+                           FontWeight="SemiBold" Name="tbRedScore"
+                           Text="0"/>
             </Grid>
 
             <!-- 3rd Row, 2nd Column -->
@@ -166,10 +167,10 @@
 
                     <Grid Grid.Row="1">
                         <Rectangle Fill="Yellow"/>
-                        <TextBlock Text="2:00" VerticalAlignment="Center"
+                        <TextBlock Text="" VerticalAlignment="Center"
                                    HorizontalAlignment="Center" 
                                    FontSize="48" Foreground="Black" 
-                                   FontWeight="Bold"/>
+                                   FontWeight="Bold" Name="tbTime"/>
                     </Grid>
                     
                 </Grid>
@@ -197,7 +198,7 @@
                 <TextBlock Text="0" VerticalAlignment="Center"
                        HorizontalAlignment="Center" 
                        FontSize="128" Foreground="White" 
-                       FontWeight="SemiBold"/>
+                       FontWeight="SemiBold" Name="tbBlueScore"/>
             </Grid>
 
         </Grid>
@@ -205,8 +206,70 @@
         <Rectangle Grid.Row="3" Fill="Black"/>
 
         <Grid Grid.Row="3">
-            <UserControls:ControlBar />
-            
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="40*" />
+                    <ColumnDefinition Width="20*"/>
+                    <ColumnDefinition Width="40*"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid>
+
+                    <Button Content="Reset" Name="btnReset"
+                            Width="70" Margin="5" Background="DimGray"
+                            Click="btnReset_Click" HorizontalAlignment="Left"/>
+
+                </Grid>
+                
+                <Grid Grid.Column="1">
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <!-- Start -->
+                    <Grid x:Name="btnStart" Grid.Column="0">
+                        <Button Content="Play"
+                                Width="70"
+                                Margin="5"
+                                Background="DimGray"
+                                Click="Play_Click"
+                                />
+
+                    </Grid>
+
+
+                    <!-- Pause -->
+                    <Grid x:Name="btnPause" Grid.Column="1">
+                        <Button 
+                                Width="70"
+                                Margin="5"
+                                Background="DimGray"
+                                Click="Pause_Click"
+                                >
+
+                            <Button.Content>
+                                <TextBlock x:Name="btnPauseContent" Text="Pause"/>
+                            </Button.Content>
+
+                        </Button>
+
+                    </Grid>
+
+                </Grid>
+                <!-- Setup -->
+                <Grid x:Name="btSetup" Grid.Column="2">
+                    <Button Content="Setup"
+                            Width="70"
+                            Margin="5"
+                            HorizontalAlignment="Right"
+                            Background="DimGray"
+                            Click="Setup_Click"
+                            />
+                </Grid>
+            </Grid>
+
         </Grid>
     </Grid>
     
