--- a/itsEVEST/View/Windows/TrainingWindow.xaml
+++ b/itsEVEST/View/Windows/TrainingWindow.xaml
@@ -5,12 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:itsEVEST.View.Windows"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
         Title="TrainingWindow" Height="450" Width="800">
     <Grid>
 
-        
-        
         <Grid.RowDefinitions>
             <RowDefinition Height="20*"/>
             <RowDefinition Height="60*"/>
@@ -57,11 +56,11 @@
 
             <Button Content="Back" Name="btnBack" Width="90" Height="30" Margin="35,0,0,0" 
                     Background="DimGray" HorizontalAlignment="Left"
-                    VerticalAlignment="Center"/>
+                    VerticalAlignment="Center" Click="btnBack_Click"/>
 
             <Button Content="Pairing" Name="btnPairing" Width="90" Height="30" Margin="0,0,35,0" 
                     Background="DimGray" HorizontalAlignment="Right"
-                    VerticalAlignment="Center"/>
+                    VerticalAlignment="Center" Click="btnPairing_Click"/>
 
         </Grid>
 
